# api/docs/swagger.json
@@ -5,56 +5,8 @@
     },
     "paths": {
         "/book": {
-            "get": {
-                "description": "Get List Book",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Get List Book",
-                "operationId": "get_list_book",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "offset",
-                        "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "GetBookListBody",
-                        "schema": {
-                            "$ref": "#/definitions/models.GetListBookResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argumant",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
-                "description": "Create Book",
+                "description": "CreateBook",
                 "consumes": [
                     "application/json"
                 ],
@@ -64,12 +16,12 @@
                 "tags": [
                     "Book"
                 ],
-                "summary": "Create Book",
-                "operationId": "create_book",
+                "summary": "CreateBook",
+                "operationId": "CreateBook",
                 "parameters": [
                     {
                         "description": "CreateBookRequestBody",
-                        "name": "category",
+                        "name": "book",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -101,7 +53,7 @@
         },
         "/book/{id}": {
             "get": {
-                "description": "Get By ID Book",
+                "description": "GetByID Book",
                 "consumes": [
                     "application/json"
                 ],
@@ -111,8 +63,8 @@
                 "tags": [
                     "Book"
                 ],
-                "summary": "Get By ID Book",
-                "operationId": "get_by_id_book",
+                "summary": "GetByID Book",
+                "operationId": "Get_By_IDBook",
                 "parameters": [
                     {
                         "type": "string",
@@ -123,105 +75,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "GetBookBody",
+                    "201": {
+                        "description": "GetByIDBookBody",
                         "schema": {
                             "$ref": "#/definitions/models.Book"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argumant",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update Book",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Update Book",
-                "operationId": "update_book",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "UpdateBookRequestBody",
-                        "name": "category",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateBookSwag"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "UpdateBookBody",
-                        "schema": {
-                            "$ref": "#/definitions/models.Book"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argumant",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete Book",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Delete Book",
-                "operationId": "delete_book",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "DeleteBookBody",
-                        "schema": {
-                            "$ref": "#/definitions/models.Empty"
                         }
                     },
                     "400": {
@@ -240,54 +97,6 @@
             }
         },
         "/category": {
-            "get": {
-                "description": "Get List Category",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Category"
-                ],
-                "summary": "Get List Category",
-                "operationId": "get_list_category",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "offset",
-                        "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "GetCategoryListBody",
-                        "schema": {
-                            "$ref": "#/definitions/models.GetListCategoryResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argumant",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create Category",
                 "consumes": [
@@ -377,101 +186,6 @@
                         }
                     }
                 }
-            },
-            "put": {
-                "description": "Update Category",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Category"
-                ],
-                "summary": "Update Category",
-                "operationId": "update_category",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "UpdateCategoryRequestBody",
-                        "name": "category",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateCategorySwag"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "UpdateCategoryBody",
-                        "schema": {
-                            "$ref": "#/definitions/models.Category"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argumant",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete Category",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Category"
-                ],
-                "summary": "Delete Category",
-                "operationId": "delete_category",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "DeleteCategoryBody",
-                        "schema": {
-                            "$ref": "#/definitions/models.Empty"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Argumant",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         }
     },
@@ -479,6 +193,12 @@
         "models.Book": {
             "type": "object",
             "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Category"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -502,10 +222,10 @@
         "models.Category": {
             "type": "object",
             "properties": {
-                "category_id": {
+                "created_at": {
                     "type": "string"
                 },
-                "created_at": {
+                "id": {
                     "type": "string"
                 },
                 "name": {
@@ -519,8 +239,11 @@
         "models.CreateBook": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
+                "category_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "description": {
                     "type": "string"
@@ -530,66 +253,10 @@
                 },
                 "price": {
                     "type": "number"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
         "models.CreateCategory": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Empty": {
-            "type": "object"
-        },
-        "models.GetListBookResponse": {
-            "type": "object",
-            "properties": {
-                "books": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Book"
-                    }
-                },
-                "count": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.GetListCategoryResponse": {
-            "type": "object",
-            "properties": {
-                "categorys": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Category"
-                    }
-                },
-                "count": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.UpdateBookSwag": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                }
-            }
-        },
-        "models.UpdateCategorySwag": {
             "type": "object",
             "properties": {
                 "name": {
